# conversion-engine

./: .env.example  .gitignore  Dockerfile  README.md  app.py  build_evidence_graph.py  build_invoice_summary.py  evidence_graph.json  invoice_summary.json  pyproject.toml  render.yaml
agent/: conversion_engine.py  prompts.py
agent/enrichment/: ai_maturity.py  competitor_gap.py  crunchbase.py  jobs.py  layoffs.py  pipeline.py
agent/integrations/: africas_talking.py  cal_client.py  hubspot_client.py  hubspot_mcp.py  resend_client.py
agent/observability/: tracing.py
agent/scripts/: run_e2e.py  run_outbound.py  scrape_sec_companies.py  scrape_yc_companies.py
agent/tests/agent/: test_conversion_engine.py
agent/tests/enrichment/: test_ai_maturity.py  test_competitor_gap.py  test_crunchbase.py  test_jobs.py  test_layoffs.py  test_pipeline.py
agent/tests/integrations/: test_africas_talking.py  test_cal_client.py  test_hubspot_client.py  test_resend_client.py
agent/webhooks/: email_webhook.py  sms_webhook.py
enrichment/: ai_maturity.py  crunchbase.py  jobs.py  layoffs.py
integrations/: africas_talking.py  resend_client.py
probes/: __init__.py  ablation_results.json  ablation_runner.py  failure_taxonomy.md  held_out_traces.jsonl  method.md  probe_definitions.py  probe_library.md  probe_results.json  probe_runner.py  target_failure_mode.md
scripts/: scrape_layoffs.py
tests/enrichment/: test_competitor_gap.py  test_jobs.py  test_layoffs.py  test_pipeline.py
tests/integrations/: test_africas_talking.py  test_resend_client.py
(+2 files in other folders)
